# novalyn

./: .gitignore  .npmignore  .typos.toml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCURRENCY.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPENDENCIES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NPM_INTEGRATION.md  NPM_README.md  PARITY_SPEC.md  PERF.md  README-NPM.md  README.md  SECURITY.md  build.rs  committed.toml  deny.toml  dist-workspace.toml  index.d.ts  justfile  package.json  tasks.md
.config/: nextest.toml
.github/: codecov.yml  dependabot.yml  zizmor.yml
.github/workflows/: benches.yml  bloat-check-pr-comment.yml  bloat-check.yml  ci.yml  codeql.yml  committed.yml  mark-stale.yml  napi.yml  release.yml  typos.yml  validate-pr-title.yml  zizmor.yml
benches/: parse_performance.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  cli_def.rs  lib.rs  main.rs
crates/cli/tests/: cli_integration.rs  config.rs  error_handling.rs  interpolation.rs  logging.rs  multi_issue_and_breaking_footer.rs  parsing_classification.rs  repository_format.rs  version_inference.rs
crates/cli/tests/snapshots/: cli_extras__cli_help.snap
crates/cli/wix/: main.wxs
crates/core/: Cargo.toml
crates/core/benches/: additional_perf.rs  parse_performance.rs
crates/core/src/: authors.rs  changelog.rs  config.rs  conventional.rs  error.rs  git.rs  github.rs  lib.rs  parse.rs  pipeline.rs  render.rs  repository.rs  utils.rs
crates/core/tests/: author_coverage.rs  chore_deps_filter.rs  config.rs  config_comprehensive.rs  conventional_parsing.rs  determinism.rs  error_display.rs  error_handling.rs  git_layer.rs  github_coverage.rs  github_integration.rs  github_sync.rs  interpolation.rs  multi_issue_and_breaking_footer.rs  no_impact_patch_bump.rs  parallel_parsing.rs  parsing_classification.rs  pipeline_release.rs  proptest_config.rs  proptest_parsing.proptest-regressions  proptest_parsing.rs  proptest_repository.rs  proptest_semver.rs  render_block_snapshot.rs  render_snapshot.rs  repository_comprehensive.rs  repository_detect.rs  repository_format.rs  scope_map.rs  signed_tag.rs  version_inference.rs
crates/novalyn/: Cargo.toml
crates/novalyn-napi/: Cargo.toml  NPM_README.md  README.md  bun.lockb.txt  index.d.ts  index.js  package.json
crates/novalyn-napi/scripts/: copy-cli.ts
crates/novalyn-napi/src/: lib.rs
crates/novalyn/src/: authors.rs  changelog.rs  cli_def.rs  error.rs  git.rs  lib.rs  main.rs  pipeline.rs  render.rs  shells.rs
crates/novalyn/tests/: author_coverage.rs  chore_deps_filter.rs  cli_extras.rs  conventional_parsing.rs  determinism.rs  github_sync.rs  no_impact_patch_bump.rs  pipeline_release.rs  repository_detect.rs  scope_map.rs  signed_tag.rs
crates/novalyn/tests/snapshots/: config__default_config.snap  render_block_snapshot__render_block.snap
examples/: generate.js  release.js  show-version.js
src/: authors.rs  changelog.rs  cli.rs  cli_def.rs  config.rs  conventional.rs  error.rs  git.rs  github.rs  lib.rs  logging.rs  main.rs  napi.rs  napi_bindings.rs  parse.rs  pipeline.rs  render.rs  repository.rs
test/: basic.test.js
tests/: author_coverage.rs  chore_deps_filter.rs  cli_extras.rs  cli_integration.rs  config.rs  conventional_parsing.rs  determinism.rs  error_handling.rs  git_layer.rs  github_coverage.rs  github_sync.rs  interpolation.rs  logging.rs  multi_issue_and_breaking_footer.rs  no_impact_patch_bump.rs  parallel_parsing.rs  parsing_classification.rs  pipeline_release.rs  render_block_snapshot.rs  render_snapshot.rs  repository_detect.rs  repository_format.rs  scope_map.rs  signed_tag.rs  version_inference.rs
tests/snapshots/: cli_extras__cli_help.snap  render_block_snapshot__render_block.snap
