[workspace]
resolver = "2"
members = ["crates/novalyn", "crates/novalyn-napi"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/nanodelabs/novalyn"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5.8"
demand = "1.7"
ecow = { version = "0.2", features = ["serde"] }
foldhash = "0.2"
git2 = "0.20"
jiff = "0.2"
memchr = "2"
once_cell = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls-native-roots-no-provider",
  "socks",
  "system-proxy",
] }
rustls = { version = "0.23.32", default-features = false, features = [
  "aws_lc_rs",
] }
scc = "3.3.1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
urlencoding = "2"

# Platform-specific dependencies
mimalloc-safe = { version = "0.1.54", default-features = false }

# NAPI dependencies
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
napi-build = "2"

# Dev dependencies
assert_cmd = "2"
assert_fs = "1"
divan = { package = "codspeed-divan-compat", version = "*" }
insta = { version = "1", features = ["yaml"] }
predicates = "3"
proptest = "1"
tempfile = "3"
wiremock = "0.6"

# Build dependencies
clap_mangen = "0.2.29"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1
