[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/nanodelabs/novalyn"
license = "MIT"
keywords = [
  "changelog",
  "cli",
  "conventional-commit",
  "generator",
  "git",
  "markdown",
]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5.8"
clap_mangen = "0.2.29"
demand = "1.7"
divan = { package = "codspeed-divan-compat", version = "*" }
ecow = { version = "0.2", features = ["serde"] }
foldhash = "0.2"
# TODO: Switch to gix ecosystem
git2 = "0.20"
insta = { version = "1", features = ["yaml"] }
jiff = "0.2"
memchr = "2"
mimalloc-safe = { version = "0.1.54", default-features = false, features = [
  "extended",
] }
once_cell = "1"
predicates = "3"
proptest = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls-native-roots-no-provider",
  "socks",
  "system-proxy",
] }
rustls = { version = "0.23.32", default-features = false, features = [
  "aws_lc_rs",
] }
# TODO: future with gix
scc = "3.3.1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
urlencoding = "2"
wiremock = "0.6"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1
