[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.1"
authors = ["Muntasir Mahmud <muntasir.joypurhat@gmail.com>"]
edition = "2024"
rust-version = "1.88"
readme = "README.md"
homepage = "https://github.com/nanodelabs/novalyn"
repository = "https://github.com/nanodelabs/novalyn"
license = "MIT"
keywords = [
  "changelog",
  "cli",
  "conventional-commit",
  "generator",
  "git",
]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5.61"
clap_complete_nushell = "4.5.10"
clap_mangen = "0.2.31"
demand = "1.8"
divan = { package = "codspeed-divan-compat", version = "4" }
ecow = { version = "0.2", features = ["serde"] }
foldhash = "0.2"
futures = "0.3"
gix = { version = "0.74.1", default-features = false, features = [
  "max-control",
  "pack-cache-lru-dynamic",
  "pack-cache-lru-static",
  "parallel",
  "revision",
  "status",
  "tracing",
  "tree-editor",
] }
insta = { version = "1", features = ["yaml"] }
jiff = "0.2"
memchr = "2"
mimalloc-safe = { version = "0.1.55", default-features = false, features = [
  "extended",
] }
once_cell = "1"
predicates = "3"
proptest = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls-native-roots-no-provider",
  "socks",
  "system-proxy",
] }
rustls = { version = "0.23.35", default-features = false, features = [
  "aws_lc_rs",
] }
scc = "3.4.6"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
] }
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
urlencoding = "2"
wiremock = "0.6"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
