[package]
name = "novalyn"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "💅 Beautiful Changelogs using Conventional Commits"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.wix]
upgrade-guid = "E71412B2-B395-4566-9FB6-53EBCC3526DF"
path-guid = "5A0D56D6-30D8-41CE-B5F6-A07E3BB98D6A"
license = false
eula = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
novalyn_core = { path = "../core", version = "0.1.0" }
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
insta.workspace = true
predicates.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc-safe.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
mimalloc-safe = { workspace = true, features = [
  "no_opt_arch",
] }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc-safe = { workspace = true, features = [
  "override",
] }
