[package]
name = "novalyn_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for novalyn changelog generation"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bench]]
harness = false
name = "additional_perf"

[[bench]]
harness = false
name = "parse_performance"

[dependencies]
anyhow.workspace = true
demand.workspace = true
ecow.workspace = true
foldhash.workspace = true
futures.workspace = true
gix.workspace = true
jiff.workspace = true
memchr.workspace = true
once_cell.workspace = true
rayon.workspace = true
reqwest.workspace = true
rustls.workspace = true
scc.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
urlencoding.workspace = true

[dev-dependencies]
assert_fs.workspace = true
divan.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
mimalloc-safe.workspace = true

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
mimalloc-safe = { workspace = true, features = [
  "no_opt_arch",
] }

[target.'cfg(target_env = "msvc")'.dev-dependencies]
mimalloc-safe = { workspace = true, features = [
  "override",
] }
